chrome extension: form load/save, view appointments
Extension popup allows quick navigation to book appointment.
Extension uses the chrome.storage.sync api to store form data.
Can restore data from form. Uses updated calendar icon.

--- a/chrome_extension/popup.html
+++ b/chrome_extension/popup.html
@@ -6,7 +6,7 @@
  -->
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
+    <title>GNIB appointment</title>
     <style>
       body {
         font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
@@ -30,8 +30,8 @@
     <script src="popup.js"></script>
   </head>
   <body>
-    <div id="status"></div>
-    <img id="image-result" hidden>
+    <h1>GNIB appointments</h1>
+    <p>browse to <a target="_blank" href="https://burghquayregistrationoffice.inis.gov.ie/Website/AMSREG/AMSRegWeb.nsf/AppSelect?OpenForm">appointment booking site</a></p>
   </body>
 </html>
 
