extension:added GNIB/VISA links to popup

--- a/source/chrome_extension/popup.html
+++ b/source/chrome_extension/popup.html
@@ -30,8 +30,9 @@
     <script src="popup.js"></script>
   </head>
   <body>
-    <h1>GNIB appointments</h1>
-    <p>browse to <a target="_blank" href="https://burghquayregistrationoffice.inis.gov.ie/Website/AMSREG/AMSRegWeb.nsf/AppSelect?OpenForm">appointment booking site</a></p>
+    <h1>Appointments</h1>
+    <p><a target="_blank" href="https://burghquayregistrationoffice.inis.gov.ie/Website/AMSREG/AMSRegWeb.nsf/AppSelect?OpenForm"><h2>GNIB</h2></a></p>
+    <p><a target="_blank" href="https://reentryvisa.inis.gov.ie/website/INISOA/IOA.nsf/AppointmentSelection?OpenForm"><h2>VISA</h2></a></p>
   </body>
 </html>
 
